# CtCI-6th-Edition-Haskell

./: .gitignore  ChangeLog.md  CtCI-6th-Edition-Haskell.cabal  README.md
src/: Ch3.hs  Lib.hs  Main.hs
src/Ch3/Data/: Queue.hs  Stack.hs
src/Ch3/Questions/: MinStack.hs
src/Ch3/Test/: MinStack.hs  Queue.hs  Stack.hs
src/Introduction/VI/: Example01.hs  Example02.hs  Example03.hs  Example04.hs  Example05.hs  Example06.hs  Example07.hs  Example08.hs  Example09.hs  Example10.hs  Example11.hs  Example14.hs  Example15.hs  Example16.hs  Example17.hs  Example18.hs  Example19.hs  Example20.hs  Example21.hs  Question01.hs  Question02.hs  Question03.hs  Question04.hs  Question05.hs  Question06.hs  Question09.hs  Question10.hs  Question11.hs  Question12.hs
src/Introduction/VI/Example14/: Internal.hs
src/chapter-1/: Ch1.hs  one-away.hs  zero-matrix.hs
src/chapter-2/: Ch2.hs
src/chapter-3/: Ch3.hs
src/chapter-3/Data/: Queue.hs  Stack.hs
src/chapter-3/Questions/: MinStack.hs
src/chapter-3/Test/: MinStack.hs  Queue.hs  Stack.hs
test/: Spec.hs
test/Introduction/VI/: Example01Spec.hs  Example02Spec.hs  Example03Spec.hs  Example05Spec.hs  Example11Spec.hs  Example14Spec.hs  Example15Spec.hs  Example16Spec.hs  Example17Spec.hs  Example18Spec.hs  Example19Spec.hs  Example21Spec.hs  Question01Spec.hs  Question02Spec.hs  Question03Spec.hs  Question04Spec.hs  Question05Spec.hs  Question06Spec.hs  Question09Spec.hs  Question10Spec.hs  Question11Spec.hs  Question12Spec.hs
test/Introduction/VI/Example14/: InternalSpec.hs
