name:                CtCI-6th-Edition-Haskell
version:             0.1.0.0
synopsis:            Haskell Solutions for Cracking the Coding Interview 6th Edition

-- description:         

homepage:            https://github.com/careercup/CtCI-6th-Edition-Haskell
bug-reports:         https://github.com/careercup/CtCI-6th-Edition-Haskell/issues
-- license:             
license-file:        LICENSE
author:              Variuos Contributors
maintainer:          NA
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >= 1.10
tested-with:         GHC == 8.0.*

extra-source-files:
    ChangeLog.md
  , LICENSE
  , README.md
  , Setup.hs

source-repository head
  type:     git
  location: https://github.com/careercup/CtCI-6th-Edition-Haskell

library
  default-language:    Haskell2010

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src

  exposed-modules:
      Introduction.VI.Example01
    , Introduction.VI.Question01
    , Introduction.VI.Question02
    , Introduction.VI.Question03
    , Introduction.VI.Question04
    , Introduction.VI.Question05

  other-modules:       

  build-depends:
      base == 4.9.*

  other-extensions:

test-suite CtCI-6th-Edition-Haskell-Tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src
    , test

  other-modules:
      Introduction.VI.Example01
    , Introduction.VI.Example01Spec
    , Introduction.VI.Question01
    , Introduction.VI.Question01Spec
    , Introduction.VI.Question02
    , Introduction.VI.Question02Spec
    , Introduction.VI.Question03
    , Introduction.VI.Question03Spec
    , Introduction.VI.Question04
    , Introduction.VI.Question04Spec
    , Introduction.VI.Question05
    , Introduction.VI.Question05Spec

  build-tool-depends:
      hspec-discover:hspec-discover == 2.4.*

  build-depends:
      base       == 4.9.*
    , hspec      == 2.4.*
    , QuickCheck == 2.9.*

  other-extensions:

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  main-is:             Main.hs

  ghc-options:         -Wall -fwarn-tabs -fwarn-monomorphism-restriction
                       -fwarn-unused-do-bind

  hs-source-dirs:
      src
    , src/chapter-1
    , src/chapter-2
    , src/chapter-3

  other-modules:
--      Ch1
--    , Ch2
--    , Ch3
--    , Data.Queue
--    , Data.Stack
--    , find-cycle
--    , intersection
--    , is-palindrome
--    , is-permutation
--    , is-rotation
--    , is-unique
--    , kth-last
--    , one-away
--    , palindrome-permutation
--    , partition
--    , Questions.MinStack
--    , remove-dups
--    , remove-node
--    , rotate-matrix
--    , string-compression
--    , sum-lists
--    , Test.MinStack
--    , Test.Queue
--    , Test.Stack
--    , url-encode
--    , zero-matrix

  build-depends:
      base
    , hspec
    , QuickCheck

  other-extensions:
